--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/geolocation": "^3.3.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.0",
+    "axios": "^1.7.2",
+    "i18next": "^23.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.10"
+    "react-i18next": "^15.0.0",
+    "react-native": "0.72.10",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-localize": "^3.2.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
